[tool.poetry]
name = "001"
version = "0.1.0"
description = ""
authors = ["Nana Insaidoo <nana.insaidoo@meterian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
integer = "1.0.3"
pdoc = "14.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

